﻿/*
  Plugin FileUploader pour Mantis BugTracker :
  - Envoi de fichiers multiples dans les bugs en drag & drop
  Pour ce projet j'ai utilisé les librairies suivantes :
    - Jquery-FileDrop : https://github.com/weixiyen/jquery-filedrop
    - Le tutoriel suivant : http://tutorialzine.com/2011/09/html5-file-upload-jquery-php/
    - Le script d'upload https://github.com/mantisbt-plugins/PastePicture/blob/master/PastePicture/pages/bug_file_add.php

  © Hennes Hervé - 2015
  http://www.h-hennes.fr
 */

2014-12-18 : V 0.1.0 : Version initiale du module
2015-02-06 : V 0.1.1 : Optimisation traductions
2015-06-10 : V 0.1.2 : Gestion des traductions dans la page d'upload et dans le javascript
2015-06-11 : V 0.2.0 : Mise en place d'une page de configuration qui permets de définir : Nombre de fichiers maximum à envoyer, Taille Maximum des fichiers, Extensions de fichiers autorisés
2015-06-11 : V 0.2.1 : Correctifs Trads 